lab_7/lab_7.sdk/.metadata/.plugins/org.eclipse.cdt.ui/lab_7.build.log
15:38:51 **** Build of configuration Debug for project lab_7 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/lab_7.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lab_7.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../lab_7_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/lab_7.d" -MT"src/lab_7.o" -o "src/lab_7.o" "../src/lab_7.c"
../src/lab_7.c:19:1: error: unknown type name 'XGpio'
 XGpio BTNInst;
 ^~~~~
../src/lab_7.c:20:1: error: unknown type name 'XGpio'
 XGpio SWInst, LEDInst;
 ^~~~~
../src/lab_7.c: In function 'TaskLED':
../src/lab_7.c:47:3: warning: implicit declaration of function 'XGpio_DiscreteWrite' [-Wimplicit-function-declaration]
   XGpio_DiscreteWrite(&LEDInst, LED_CHANNEL, led);
   ^~~~~~~~~~~~~~~~~~~
../src/lab_7.c: In function 'TaskBTN':
../src/lab_7.c:66:9: warning: implicit declaration of function 'XGpio_DiscreteRead' [-Wimplicit-function-declaration]
   btn = XGpio_DiscreteRead(&BTNInst, BTN_CHANNEL);
         ^~~~~~~~~~~~~~~~~~
../src/lab_7.c: In function 'main':
../src/lab_7.c:113:14: warning: implicit declaration of function 'XGpio_Initialize'; did you mean 'vListInitialise'? [-Wimplicit-function-declaration]
  statusLED = XGpio_Initialize(&LEDInst, LED_GPIO);
              ^~~~~~~~~~~~~~~~
              vListInitialise
../src/lab_7.c:114:19: error: 'XST_SUCCESS' undeclared (first use in this function)
  if (statusLED != XST_SUCCESS) return XST_FAILURE;
                   ^~~~~~~~~~~
../src/lab_7.c:114:19: note: each undeclared identifier is reported only once for each function it appears in
../src/lab_7.c:114:39: error: 'XST_FAILURE' undeclared (first use in this function)
  if (statusLED != XST_SUCCESS) return XST_FAILURE;
                                       ^~~~~~~~~~~
../src/lab_7.c:120:2: warning: implicit declaration of function 'XGpio_SetDataDirection' [-Wimplicit-function-declaration]
  XGpio_SetDataDirection(&LEDInst, LED_CHANNEL, 0x00);
  ^~~~~~~~~~~~~~~~~~~~~~
make: *** [src/subdir.mk:23: src/lab_7.o] Error 1

15:38:52 Build Finished (took 233ms)

